tests/cases/errors/mod_super_out_of_scope.ring
// E0705: relative path out of scope — super:: used beyond mod nesting depth
fn main() {
    let x = super::nonexistent
}
